getting some docs working for sifty

--- a/docs/release_notes/v0.9.4.rst
+++ b/docs/release_notes/v0.9.4.rst
@@ -8,6 +8,7 @@ Introducing a new mini language, Sifty Dingo
 - you can now write filtering expressions for the list-components and
   filter-builds commands
 - filter into multiple buckets at a time with a single set of rules
+- implemented under the `kojismokydingo.sift` package
 
 Chugging along and collecting feedback
 
@@ -27,7 +28,6 @@ Chugging along and collecting feedback
   otherwise unhashable values
 - parse_datetime now accepts a 'strict=' parameter to let it return
   None instead of raising an Exception when parsing fails
--
 
 Closed Issues:
 <https://github.com/obriencj/koji-smoky-dingo/milestone/4?closed=1>
