Sifty Dingo filtering syntax (#61)
* s-expr filtering language

* flake8 complains

* docstrings and some refactoring to be more flexible about the dict values

* Do a syntax check on unclosed quotes

* include sift subpackage

* stubs for sift docs

* some helpful wrappers

* filling in some simple predicates

* fixing last night's wip

* working towards the dream

* let's get some docs going for the sifty dingo mini-language

* rename PropertySieve to ItemSieve since it gets items, not properties

* some people object to using __call__ but I like it... let's meet in the middle

* easier on my eyes

* reworking some of the item sieve behavior and testing

* shut up coverage about empty functions

* refactor

* full test coverage for the core Sifty Dingo implementation

* ensure order is preserved, and be more lazy with the not substitutions

* just checking

* more sieves for build infos, plus unit tests

* mention the new filter lang

* working build state filtering, plus tests

* full coverage for build sieves so far

* fill in some missing test coverage

* more matcher tests

* working over docs

* enable some optional versions [ci skip]

* some escape sequence tweaks

* explain

* 3.9 can wait

* stop purging my htmlcov unless it's necessary

* wip

* item paths and coverage

* no reason to keep looking up that attribute

* context for working with CLI output destinations

* connect sifter filtering to filter-builds and list-component-builds

* export open_output

* build sieves tagged and inherited

* make sure we set the default to stdout if unspecified

* reuse the tokens field and __repr__ from base Sieve class in more places

* unit test coverage and fixes for tagged and inherited sieves

* added flag suffixes to regex and glob literals

* wip

* somehow missed this

* the flake8 maintainers are jackasses and have intentionally moved to break their setup.py integratio

--- a/docs/release_notes/v0.9.4.rst
+++ b/docs/release_notes/v0.9.4.rst
@@ -3,6 +3,13 @@ Koji Smoky Dingo preview 0.9.4 Release Notes
 
 *Unreleased*
 
+Introducing a new mini language, Sifty Dingo
+
+- you can now write filtering expressions for the list-components and
+  filter-builds commands
+- filter into multiple buckets at a time with a single set of rules
+- implemented under the `kojismokydingo.sift` package
+
 Chugging along and collecting feedback
 
 - list-build-archives now accepts multiple NVRs
