--- a/docs/release_notes/v0.9.7.rst
+++ b/docs/release_notes/v0.9.7.rst
@@ -1,7 +1,12 @@
 Koji Smoky Dingo preview 0.9.7 Release Notes
 ============================================
 
-*unreleased*
+*March 08, 2021*
+
+I hope that this will be the final preview release, with the next
+version being the official 1.0.0. There may be some final API
+adjustments (renaming, etc) but otherwise I am happy with the current
+set of features.
 
 Still chugging along!
 
