--- a/docs/release_notes/v1.1.0.rst
+++ b/docs/release_notes/v1.1.0.rst
@@ -10,6 +10,14 @@ This release adds the following:
   lowest EVR, respectively
 - fixed backtrace in the `latest-archives` command where the validate
   function was incompletely decorating a path option
+- Added `as_channelinfo`, `as_packageinfo`, `as_repoinfo`,
+  `NoSuchPackage`, `NoSuchRepo` to the core API
+- Added support for more types to the `open` command: `channel`,
+  `package`, `repo`, `build-dir`, `tag-repo-dir`, and `tag-latest-dir`
+- Added `--print` option to the open command
+- Made the `open` command return the return code of the URL opening
+  executable
+
 
 Closed Issues:
 <https://github.com/obriencj/koji-smoky-dingo/milestone/8?closed=1>
