mention the new command in release notes

--- a/docs/release_notes/v2.0.0.rst
+++ b/docs/release_notes/v2.0.0.rst
@@ -38,3 +38,4 @@ Commands
 * Added ``--print`` option to the ``open`` command
 * Made the ``open`` command return the return code of the URL opening
   executable
+* Added ``check-repo`` command to check for repo staleness
