--- a/docs/release_notes/v2.0.0.rst
+++ b/docs/release_notes/v2.0.0.rst
@@ -1,7 +1,7 @@
 Koji Smoky Dingo 2.0.0 Release Notes
 ====================================
 
-*Unreleased*
+*January 27, 2023*
 
 Version 2.0.0 continues the features from 1.1.0 with a few
 incompatible API exceptions as noted below
