this becomes version 2.1.0, let's start the changelog

--- a/docs/release_notes/v2.0.0.rst
+++ b/docs/release_notes/v2.0.0.rst
@@ -60,3 +60,10 @@ Commands
   or to print the pullspec from same
 * Added ``--stats`` option to the ``userinfo`` command to include a
   summary of statistics for the user
+
+
+Issues
+------
+
+Closed Issues:
+<https://github.com/obriencj/koji-smoky-dingo/milestone/7?closed=1>
