--- a/docs/release_notes/v2.1.0.rst
+++ b/docs/release_notes/v2.1.0.rst
@@ -12,6 +12,8 @@ Commands
 * Introduces the ``repoquery`` command, which will perform a dnf query on
   the contents of a tag or target's repository and correlate the results
   back to the underlying koji build.
+* Fixed the ``affected-targets`` command, and switched to using tabulated
+  output.
 
 
 API
@@ -19,6 +21,7 @@ API
 
 * optimizes the ``bulk_load_tasks`` call to use the list version of
   ``getTaskInfo``
+* fixed ``gather_affected_targets`` which was backtracing
 
 
 Other
