--- a/docs/release_notes/v2.2.0.rst
+++ b/docs/release_notes/v2.2.0.rst
@@ -1,9 +1,9 @@
-Koji Smoky Dingo 2.1.0 Release Notes
+Koji Smoky Dingo 2.2.0 Release Notes
 ====================================
 
 *Unreleased*
 
-Version 2.2.0 continues compatability from 2.0.0, with some additional
+Version 2.2.0 continues compatability from 2.1.0, with some additional
 features as noted below
 
 
@@ -11,15 +11,17 @@ Commands
 --------
 
 * Updated the ``userinfo`` command to use an anonymous-compatible
-  group-membership query. Previously the ``getGroupMembers`` call was
+  group membership query. Previously the ``getGroupMembers`` call was
   being used, which always failed because it required the admin
-  permission and the command was anonymous.
+  permission and the command was anonymous. New implementation uses
+  ``queryHistory``
 
 
 API
 ---
 
 * introduced a new `kojismokydingo.users.get_group_members` function
+* fixed some missing ``__all__`` exports in `kojismokydingo.types`
 
 
 Issues
