--- a/docs/release_notes/v2.2.0.rst
+++ b/docs/release_notes/v2.2.0.rst
@@ -24,6 +24,7 @@ API
 ---
 
 * introduced a new `kojismokydingo.users.get_group_members` function
+* introduced a new `kojismokydingo.users.get_user_groups` function
 * fixed some missing ``__all__`` exports in `kojismokydingo.types`
 
 
