--- a/docs/release_notes/v2.2.0.rst
+++ b/docs/release_notes/v2.2.0.rst
@@ -26,6 +26,10 @@ API
 * introduced a new `kojismokydingo.users.get_group_members` function
 * introduced a new `kojismokydingo.users.get_user_groups` function
 * fixed some missing ``__all__`` exports in `kojismokydingo.types`
+* the `kojismokydingo.hub_version` function will work with the new
+  `koji.hub_version_str` property, which is populated from a new value
+  in http headers on responses from the hub. This potentially saves us
+  the explicit ``getKojiVersion`` call on newer deployments
 
 
 Meta Plugin
@@ -54,6 +58,8 @@ Other
 * migrated away from the ``build_sphinx`` setuptools command
 * introduced nightly CI that runs against the upstream git version of
   koji, in order to catch any additional API changes early on
+* added more static analysis checking and a special proxytype plugin,
+  and moved from the ``stubs`` directory to the ``mypy`` directory
 
 
 Issues
