mention in docs

--- a/docs/release_notes/v2.2.0.rst
+++ b/docs/release_notes/v2.2.0.rst
@@ -48,6 +48,7 @@ Bugfix
 ------
 
 * added missing caret support to `kojismokydingo.rpm.evr_compare`
+* entry points compatability for Python 3.12
 
 
 Other
