--- a/docs/release_notes/v2.2.0.rst
+++ b/docs/release_notes/v2.2.0.rst
@@ -30,6 +30,8 @@ API
   `koji.hub_version_str` property, which is populated from a new value
   in http headers on responses from the hub. This potentially saves us
   the explicit ``getKojiVersion`` call on newer deployments
+* made GOptions optional in some cases where it is trivial to recreate
+  an instance from a ClientSession
 
 
 Meta Plugin
